add missing import

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ Description: More details about what the package does. See
             <http://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file> for details
             on how to write this part.
 License: GPL (>= 2)
-Imports: Rcpp (>= 1.0.4)
+Imports: Rcpp (>= 1.0.4), dplyr
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 7.1.0
